# Cpp_project

./: .gitignore  Announcement_on_bb.md  README.md
Project_demo/MaChao_demo/: CMakeLists.txt  Spyder.launch.pyw  main.cpp
Project_demo/MaChao_demo/Python/: python38._pth
Project_demo/MaChao_demo/pkgs/Cython/: StringIOTree.cp38-win_amd64.pyd  Utils.cp38-win_amd64.pyd
Project_demo/MaChao_demo/pkgs/Cython/Compiler/: Code.cp38-win_amd64.pyd  FlowControl.cp38-win_amd64.pyd  FusedNode.cp38-win_amd64.pyd  Parsing.cp38-win_amd64.pyd  Scanning.cp38-win_amd64.pyd  Visitor.cp38-win_amd64.pyd
Project_demo/MaChao_demo/pkgs/Cython/Plex/: Actions.cp38-win_amd64.pyd  DFA.cp38-win_amd64.pyd  Machines.cp38-win_amd64.pyd  Scanners.cp38-win_amd64.pyd  Transitions.cp38-win_amd64.pyd
Project_demo/MaChao_demo/pkgs/Cython/Runtime/: refnanny.cp38-win_amd64.pyd
Project_demo/MaChao_demo/pkgs/Cython/Tempita/: _tempita.cp38-win_amd64.pyd
Project_demo/MaChao_demo/pkgs/PyQt5-5.15.9.dist-info/: RECORD
Project_demo/MaChao_demo/pkgs/PyQt5_Qt5-5.15.2.dist-info/: RECORD
Project_demo/MaChao_demo/pkgs/PyQtWebEngine-5.15.6.dist-info/: RECORD
Project_demo/MaChao_demo/pkgs/PyQtWebEngine_Qt5-5.15.2.dist-info/: RECORD
Project_demo/MaChao_demo/pkgs/jellyfish/: _rustyfish.cp38-win_amd64.pyd
Project_demo/MaChao_demo/pkgs/pyzmq-25.1.1.dist-info/: RECORD
Project_demo/MaChao_demo/pkgs/sphinx-7.1.2.dist-info/: RECORD
Project_demo/MaChao_demo/pkgs/spyder-5.4.5.dist-info/: RECORD  direct_url.json
Project_demo/MaChao_demo/pkgs/spyder_terminal-1.2.2.dist-info/: RECORD
Project_demo/csc3002demo0.0/: CMakeLists.txt  main.cpp
(+180 files in other folders)
